--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,6 +1,6 @@
 
 
-<title>DERO ┋ Privacy for Smart Contracts</title>
+<title>Sean Esteva | Full-Stack Developer</title>
 
 <link rel="stylesheet" href="./css/style.css">
 
@@ -10,10 +10,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="Dero. A secure, private blockchain with Smart Contracts." />
-<meta name="keywords" content="smart contract, privacy, private, CryptoNote, cryptocurrency, mining, blockchain" />
+<meta name="description" content="Sean Eseteva personal website"/>
+<meta name="keywords" content="front-end developer, back-end developer, full-stack developer, cryptocurrency"/>
 
-<meta name="author" content="DG" />
+<meta name="author" content="SE" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
